--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-html {
-	box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-	box-sizing: inherit;
-}
-
 @font-face {
   font-family: 'Montserrat';
   src: local('Montserrat-Regular'),
@@ -49,11 +40,33 @@ html {
 
 :root{
   --text-color: #000000;
+  --text-color-light: #FFFFFF;
+
+  --ui-orange: #FF9900;
+  --ui-orange-light: #FFB84D;
+  --ui-orange-dark: #E1670E;
+
+  --ui-gray: #666666;
+  --ui-gray-light: #CACACA;
+  --ui-gray-dark: #414141;
+  --ui-black: #000000;
+
+  --gap: 32px;
 
   --font-main: 'Montserrat', sans-serif;
 }
 
+html {
+	box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
 body{
+  min-width: 320px;
   font-weight: 400;
   font-family: var(--font-main);
   background-color: #FFFFFF;
@@ -70,12 +83,685 @@ img{
 
 .container{
   margin: 0 auto;
-  max-width: 1800px;
-  padding: 0 15px;
+  max-width: 1870px;
+  padding: 0 50px;
+  width: 100%;
 }
 
 .list-resert{
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+/* ------Header------ */
+
+.header {
+  padding-top: 14px;
+  padding-bottom: 14px;
+  background-color: #FFFFFF;
+  border-radius: 0 0 32px 32px;
+  box-shadow: 0 5px 40px 0 rgba(0, 0, 0, 0.1);
+}
+
+.header__container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.logo {
+  display: inline-flex;
+}
+
+.logo__icon {
+  flex-shrink: 0;
+}
+
+.header__nav {
+  margin-left: auto;
+  margin-right: 85px;
+}
+
+.header__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 85px;
+}
+
+.header__link {
+  position: relative;
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--text-color);
+  outline: none;
+  transition: color .1s ease-in;
+}
+
+.header__link::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -7px;
+  width: 100%;
+  height: 2px;
+  opacity: 0;
+}
+
+.header__link:focus-visible{
+  outline: 2px solid var(--ui-orange);
+  outline-offset: 5px;
+}
+
+.header__link:hover::after{
+  background-color: var(--ui-orange);
+  opacity: 1;
+}
+
+.header__link:active{
+  color: var(--ui-orange-dark);
+}
+
+.header__link:active::after{
+  background-color: var(--ui-orange-dark);
+  opacity: 1;
+}
+
+.search {
+  all: unset;
+  cursor: pointer;
+}
+
+.search__icon {
+  stroke: var(--ui-black);
+  transition: stroke .2s ease-in, fill .2s ease-in;
+}
+
+.search:focus-visible .search__icon{
+  outline: 2px solid var(--ui-orange);
+  outline-offset: 5px;
+}
+
+.search:hover .search__icon{
+  stroke: var(--ui-orange);
+}
+
+.search:active .search__icon{
+  stroke: var(--ui-black);
+}
+
+.search__rect{
+  fill: var(--ui-black);
+}
+
+.search:hover .search__rect{
+  fill: var(--ui-orange);
+}
+
+.search:active .search__rect{
+  fill: var(--ui-black);
+}
+
+/* ------Hero------ */
+
+.hero{
+  padding-top: 48px;
+  padding-bottom: 25px;
+}
+
+.hero__content {
+  min-height: 620px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 99px 80px;
+  background-image: url('../img/header__bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 32px;
+}
+
+.hero__title {
+  margin: 0;
+  margin-bottom: 22px;
+  max-width: 837px;
+  font-size: 70px;
+  font-weight: 800;
+  color: var(--text-color-light);
+  line-height: 88px;
+}
+
+.hero__text {
+  margin: 0;
+  margin-bottom: 117px;
+  max-width: 790px;
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--text-color-light);
+}
+
+.hero__btn {
+  max-width: 280px;
+  padding: 25px 40px;
+  font-size: 23px;
+  font-weight: 700;
+  color: var(--text-color-light);
+  border-radius: 16px;
+  background-color: var(--ui-orange);
+  border: none;
+  outline: none;
+  transition: background-color .2s ease-in;
+}
+
+.hero__btn:focus-visible{
+  background-color: var(--ui-orange-light);
+}
+
+.hero__btn:hover{
+  background-color: var(--ui-orange-light);
+}
+
+.hero__btn:active{
+  background-color: var(--ui-orange-dark);
+}
+
+/* ------About------ */
+
+.about{
+  padding-top: 27px;
+  padding-bottom: 50px;
+}
+
+.about__title {
+  margin: 0;
+  margin-bottom: 25px;
+  font-weight: 400;
+  font-size: 48px;
+  color: var(--text-color);
+}
+
+.about__text {
+  margin: 0;
+  margin-bottom: 48px;
+  max-width: 1235px;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--text-color);
+}
+
+.about__content {
+  display: flex;
+  justify-content: space-between;
+  gap: var(--gap);
+  flex-wrap: wrap;
+}
+
+.about__indicator {
+  display: flex;
+  align-items: flex-end;
+  width: calc((100% - var(--gap)) / 2);
+  background-image: url('../img/indicator.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 32px;
+}
+
+.about__indicator-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 50px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 32px;
+}
+
+.about__indicator-text {
+  margin: 0;
+  max-width: 433px;
+  font-size: 16px;
+  line-height: 32px;
+  font-weight: 700;
+  color: var(--text-color-light);
+}
+
+.about__indicator-link {
+  padding: 18px 36px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text-color-light);
+  background-color: transparent;
+  border: 3px solid var(--ui-orange);
+  border-radius: 16px;
+  outline: none;
+  transition: background-color .2s ease-in, border .2s ease-in;
+}
+
+.about__indicator-link:focus-visible,
+.about__indicator-link:hover {
+  background-color: var(--ui-orange);
+  border: 3px solid var(--ui-orange);
+}
+
+.about__indicator-link:active{
+  background-color: var(--ui-orange-dark);
+  border: 3px solid var(--ui-orange-dark);
+}
+
+.about__list {
+  width: calc((100% - var(--gap)) / 2);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+}
+
+.about__list-item {
+  padding: 65px 110px 65px 300px;
+  border: 1px solid var(--ui-gray-light);
+  border-radius: 32px;
+  background-repeat: no-repeat;
+  background-position: left 60px center;
+}
+
+.about__list-item--consulting{
+  background-image: url('../img/consulting.svg');
+}
+
+.about__list-item--raising{
+  background-image: url('../img/raising.svg');
+}
+
+.about__list-title {
+  margin: 0;
+  margin-bottom: 8px;
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--text-color);
+}
+
+.about__list-text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--text-color);
+}
+
+/* ------Stages------ */
+
+.stages {
+  padding-top: 51px;
+  padding-bottom: 50px;
+}
+
+.stages__title {
+  margin: 0;
+  margin-bottom: 35px;
+  font-weight: 400;
+  font-size: 48px;
+  color: var(--text-color);
+}
+
+.stages-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.stages-wrapper::after{
+  content: "";
+  width: 870px;
+  height: 460px;
+  background-image: url('../img/stages.jpg');
+  border-radius: 32px;
+}
+
+.stages__contetnt{
+  max-width: 758px;
+  width: 100%;
+}
+
+.stages__strong {
+  margin: 0;
+  margin-bottom: 8px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  color: var(--text-color);
+}
+
+.stages__paragraph {
+  margin: 0;
+  max-width: 733px;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--text-color);
+}
+
+.stages__paragraph--big{
+  max-width: 758px;
+}
+
+.stages__paragraph:last-of-type{
+  margin-bottom: 18px;
+}
+
+.stages__buttons {
+  display: flex;
+  align-items: center;
+}
+
+.stages__more {
+  margin-right: 31px;
+  padding: 20px 38px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text-color-light);
+  background-color: var(--ui-orange);
+  border-radius: 16px;
+  outline: none;
+  transition: background-color .2s ease-in;
+}
+
+.stages__more:focus-visible,
+.stages__more:hover {
+  background-color: var(--ui-orange-light);
+}
+
+.stages__more:active{
+  background-color: var(--ui-orange-dark);
+}
+
+.stages__contract {
+  padding: 20px 38px;
+  font-size: 16px;
+  color: var(--text-color);
+  background-color: transparent;
+  border: 1px solid var(--ui-black);
+  border-radius: 16px;
+  outline: none;
+  transition: background-color .2s ease-in, color .2s ease-in, border .2s ease-in;
+}
+
+.stages__contract:focus-visible,
+.stages__contract:hover{
+  color: var(--text-color-light);
+  background-color: var(--ui-gray);
+  border: 1px solid var(--ui-gray);
+}
+
+.stages__contract:active{
+  color: var(--text-color-light);
+  background-color: var(--ui-black);
+  border: 1px solid var(--ui-black);
+}
+
+.stages__img {
+  object-fit: cover;
+  border-radius: 32px;
+}
+
+/* ------Questions------ */
+
+.questions {
+  padding-top: 52px;
+  padding-bottom: 100px;
+}
+
+.questions__title {
+  margin: 0;
+  margin-bottom: 33px;
+  font-weight: 400;
+  font-size: 48px;
+  color: var(--text-color);
+}
+
+.questions__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap);
+  --offsets: 2;
+}
+
+.questions__item {
+  width:  calc((100% - (var(--gap) * var(--offsets))) / (var(--offsets) + 1));
+  padding: 64px 60px;
+  background-color: #FFFFFF;
+  border-radius: 32px;
+  border: 1px solid var(--ui-gray-light);
+}
+
+.questions__question {
+  margin: 0;
+  margin-bottom: 8px;
+  max-width: 412px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 29px;
+  color: var(--text-color);
+}
+
+.questions__answer {
+  margin: 0;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--text-color);
+}
+
+/* ------Footer------ */
+
+.footer{
+  padding: 50px 0;
+  background-color: #000000;
+}
+
+.footer__container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer__menu {
+  flex-basis: 20%;
+}
+
+.footer__logo {
+  margin-bottom: 20px;
+}
+
+.footer__list{
+  margin-bottom: 90px;
+}
+
+.footer__link {
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 600;
+  color: var(--ui-gray-light);
+  transition: color .2s ease-in;
+}
+
+.footer__link:focus-visible{
+  color: var(--ui-gray-light);
+  outline: 2px solid var(--ui-orange);
+  outline-offset: 5px;
+}
+
+.footer__link:hover{
+  color: var(--ui-orange);
+}
+
+.footer__link:active{
+  color: var(--ui-orange-dark);
+}
+
+.footer__socials {
+  display: flex;
+}
+
+.social{
+ margin-right: 25px;
+}
+
+.social:last-child{
+  margin-right: 0;
+}
+
+.social__link {
+  outline: none;
+}
+
+.social__icon {
+  fill: var(--ui-gray);
+}
+
+.social__link:focus-visible .social__icon{
+  fill: var(--ui-gray);
+  outline: 2px solid var(--ui-orange);
+  outline-offset: 5px;
+}
+
+.social__icon:hover{
+  fill: var(--ui-orange);
+}
+
+.social__icon:active{
+  fill: var(--ui-orange-dark);
+}
+
+.footer__application {
+  flex-basis: 35%;
+  max-width: 570px;
+}
+
+.footer__title {
+  margin: 0;
+  margin-bottom: 28px;
+  font-weight: 400;
+  font-size: 48px;
+  color: var(--ui-gray-light);
+}
+
+.footer__fields{
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.footer__field {
+  padding: 14px 24px;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--ui-gray-light);
+  background-color: var(--ui-gray-dark);
+  border-radius: 16px;
+  border: none;
+  outline: none;
+  transition: background-color .2s ease-in, color .2s ease-in;
+}
+
+.footer__field::placeholder{
+  color: var(--ui-gray-light);
+}
+
+.footer__field:focus-visible{
+  background-color: var(--ui-gray);
+}
+
+.footer__field:hover{
+  background-color: var(--ui-gray);
+}
+
+.footer__field:active{
+  background-color: var(--ui-gray);
+  color: var(--text-color-light);
+}
+
+.footer__textarea {
+  resize: none;
+  max-height: 150px;
+}
+
+.footer__interaction {
+  display: flex;
+  align-items: center;
+}
+
+.footer__btn {
+  margin-right: 22px;
+  padding: 20px 52px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text-color-light);
+  background-color: var(--ui-orange);
+  border-radius: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: background-color .2s ease-in;
+}
+
+.footer__btn:focus-visible{
+  background-color: var(--ui-orange-light);
+}
+
+.footer__btn:hover{
+  background-color: var(--ui-orange-light);
+}
+
+.footer__btn:active{
+  background-color: var(--ui-orange-dark);
+}
+
+.footer__label{
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  padding-left: 18px;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--ui-gray-light);
+  cursor: pointer;
+}
+
+.footer__checkbox{
+  position: absolute;
+  appearance: none;
+}
+
+.footer__check{
+  position: absolute;
+  margin-left: -18px;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #CACACA;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer__checkbox:checked + .footer__check {
+  background-image: url('../img/check.svg');
+}
+
+.footer__checkbox:focus-visible + .footer__check,
+.footer__checkbox:hover + .footer__check {
+  outline: 2px solid var(--ui-orange);
+  outline-offset: 3px;
+}
+
+.footer__text {
+  flex-basis: 20%;
+  align-self: center;
+  margin: 0;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--ui-gray-light);
 }
