--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,11 @@ img{
 }
 
 .container{
-  margin: 0 auto;
-  max-width: 1870px;
-  padding: 0 50px;
   width: 100%;
+  max-width: 1870px;
+  min-width: 320px;
+  padding: 0 50px;
+  margin: 0 auto;
 }
 
 .list-resert{
@@ -215,7 +216,7 @@ img{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 99px 80px;
+  padding: 100px 80px;
   background-image: url('../img/header__bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -230,12 +231,12 @@ img{
   font-size: 70px;
   font-weight: 800;
   color: var(--text-color-light);
-  line-height: 88px;
+  line-height: 86px;
 }
 
 .hero__text {
   margin: 0;
-  margin-bottom: 117px;
+  margin-bottom: 92px;
   max-width: 790px;
   font-size: 24px;
   font-weight: 700;
@@ -244,9 +245,11 @@ img{
 
 .hero__btn {
   max-width: 280px;
-  padding: 25px 40px;
+  width: 100%;
+  padding: 25px 39px;
   font-size: 23px;
   font-weight: 700;
+  text-align: center;
   color: var(--text-color-light);
   border-radius: 16px;
   background-color: var(--ui-orange);
@@ -276,7 +279,7 @@ img{
 
 .about__title {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   font-weight: 400;
   font-size: 48px;
   color: var(--text-color);
@@ -302,10 +305,8 @@ img{
   display: flex;
   align-items: flex-end;
   width: calc((100% - var(--gap)) / 2);
-  background-image: url('../img/indicator.jpg');
+  background: #000000 center /cover url('../img/indicator.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   border-radius: 32px;
 }
 
@@ -359,7 +360,7 @@ img{
 }
 
 .about__list-item {
-  padding: 65px 110px 65px 300px;
+  padding: 66px 110px 65px 300px;
   border: 1px solid var(--ui-gray-light);
   border-radius: 32px;
   background-repeat: no-repeat;
@@ -407,24 +408,26 @@ img{
 .stages-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  /*align-items: flex-end;*/
   flex-wrap: wrap;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .stages-wrapper::after{
   content: "";
   width: 870px;
-  height: 460px;
+  min-height: 460px;
   background-image: url('../img/stages.jpg');
   border-radius: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  flex-basis: 49.2%;
 }
 
 .stages__contetnt{
   max-width: 758px;
   width: 100%;
+  flex-basis: 43%;
 }
 
 .stages__strong {
@@ -455,6 +458,7 @@ img{
 .stages__buttons {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .stages__more {
@@ -530,7 +534,7 @@ img{
 }
 
 .questions__item {
-  width:  calc((100% - (var(--gap) * var(--offsets))) / (var(--offsets) + 1));
+  max-width:  calc((100% - (var(--gap) * var(--offsets))) / (var(--offsets) + 1));
   padding: 64px 60px;
   background-color: #FFFFFF;
   border-radius: 32px;
@@ -568,11 +572,11 @@ img{
 }
 
 .footer__menu {
-  flex-basis: 20%;
+  flex-basis: 23%;
 }
 
 .footer__logo {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .footer__list{
@@ -637,7 +641,6 @@ img{
 
 .footer__application {
   flex-basis: 35%;
-  max-width: 570px;
 }
 
 .footer__title {
@@ -656,6 +659,7 @@ img{
 }
 
 .footer__field {
+  max-width: 570px;
   padding: 14px 24px;
   font-size: 16px;
   line-height: 32px;
@@ -692,6 +696,7 @@ img{
 .footer__interaction {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .footer__btn {
