--- a/css/media.css
+++ b/css/media.css
@@ -536,11 +536,11 @@
     margin-bottom: 12px;
   }
 
-  .social{
+  .footer__social{
     margin-right: 16px;
   }
 
-  .social__icon{
+  .footer__social-icon{
     max-width: 40px;
     max-height: 40px;
   }
